--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myexpressap",
+  "name": "pinboards",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "bcrypt": "^5.0.1",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
+    "mysql": "^2.18.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   }
